--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
 
+    implementation "androidx.test.espresso:espresso-idling-resource:3.3.0"
+
 
 }
