--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,7 @@ dependencies {
 
     implementation "androidx.test.espresso:espresso-idling-resource:3.3.0"
 
+    implementation "com.airbnb.android:lottie:3.7.0"
+
 
 }
