--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,10 @@ dependencies {
 
     implementation "com.airbnb.android:lottie:3.7.0"
 
+    testImplementation "org.mockito:mockito-core:3.6.0"
+    testImplementation "org.mockito:mockito-inline:3.6.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
 
 }
